--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -21,6 +7,7 @@ code {
 body {
   background-color: #555555;
   color: #eeeeee;
+  font-family: Quicksand, sans-serif;
 }
 
 ul {
@@ -45,7 +32,7 @@ button {
 }
 
 button:hover {
-  background-color: #333333;
+  background-color: #111111;
 }
 
 button:active, button:hover, button:focus {
